@@ -3,3 +3,14 @@
 # Team Members:
 ## Berejnec Adrian-Daniel
 ## Belcea Vlad
+
+### How to run our application:
+## -you can run mvn javafx:run in our main folder
+## -switch to /target folder and run the following command:
+### java -jar --module-path "C:\Program Files\Java\javafx-sdk-18.0.1\lib" --add-modules javafx.controls,javafx.fxml Hotel-Management-App-1.0-SNAPSHOT.jar
+### This command will execute our jar file
+## A few images of our app
+![](src/main/resources/images/snap1.jpg)
+![](src/main/resources/images/snap2.jpg)
+![](src/main/resources/images/snap3.jpg)
+![](src/main/resources/images/snap4.jpg)
